--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.11.0",
     "core-js": "^3.8.3",
+    "vee-validate": "^2.2.15",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5"
   },
